Almost There